Bug 1340129 - Allow empty raw frames. r=gerald, a=jcristau

MozReview-Commit-ID: AU0QrahHtYe